<resources>
    <string name="app_name">Puzzle App</string>
    <string name="todo">TODO</string>
    <string name="easy">Easy (2 X 2)</string>
    <string name="normal">Normal (3 X 3)</string>
    <string name="hard">Hard (4 X 4)</string>
    <string name="dieHard">DieHard (5 X 5)</string>
    <string name="level_fragment_title">Choose difficulty</string>
    <string name="congrats">Yaaay. Congrats! You won!</string>
    <string name="username">Username:</string>
    <string name="game_duration">Game duration:</string>
    <string name="play_again">Play Again</string>
    <string name="home">Home</string>
    <string name="puzzle_preview">PUZZLE PREVIEW</string>
    <string name="click">Click</string>
    <string name="drag_and_drop">Drag and Drop</string>
    <string name="swipe">Swipe</string>
    <string name="jigsaw">Jigsaw</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="show_hint">Show hint</string>
    <string name="pass_this_level">Pass this level</string>
    <string name="skip">Skip</string>
</resources>